# git-build-version

./: Cargo.toml  README.md
src/: lib.rs
tests/: smoke.rs
