[package]
name = "git-build-version"
description = "Allows easy inclusion of the git repository version in your project"
version = "0.1.1"
authors = ["Ceri Storey <packages@ceri.storey.name>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cstorey/git-build-version/"

[dependencies]
git2 = { version = "0.4", default-features = false, features = [] }
quick-error = "0.1.4"
