[package]
authors = ["Ceri Storey <packages@ceri.storey.name>"]
description = "Allows easy inclusion of the git repository version in your project"
license = "MIT"
name = "git-build-version"
readme = "README.md"
repository = "https://github.com/cstorey/git-build-version/"
version = "0.1.1"

[dependencies]
failure = "0.1.3"
quote = "0.6.10"
syn = "0.15.20"

[dependencies.git2]
default-features = false
features = []
version = "0.7.5"

[lib]
proc-macro = true
